# serializer version: 1
# name: TestQueryTransformation.test_date_extraction
  '''
  sql
    (SELECT uniqExact(person_id)
     FROM events
     WHERE and(equals(event, '$pageview'), greaterOrEquals(timestamp, '2024-06-15'), less(timestamp, '2024-07-20'))
     GROUP BY toStartOfDay(timestamp))
  '''
# ---
# name: TestQueryTransformation.test_preserves_alias
  '''
  sql
    (SELECT uniqExact(person_id) AS unique_persons
     FROM events
     WHERE and(equals(event, '$pageview'), greaterOrEquals(timestamp, '2024-01-01'), less(timestamp, '2024-02-01'))
     GROUP BY toStartOfDay(timestamp))
  '''
# ---
